Fix container not fitting properly the divs by removing modules in js gridCreator, also reduce border px in css - .grid-item

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 /* Insert every grid-item inside the container */
 .grid-item {
     box-sizing: border-box;
-    border: 2px solid white;
+    border: 1px solid white;
 }
 
 /* Center button and make it look better */
